# libift

./: .gitignore  .gitmodules  LICENSE  Makefile.am  README.rst  configure.ac  libift.pc.in
include/: Makefile.am
include/ift/: fcntl.hpp  incremental_failable.hpp  signal.hpp  stdarg.hpp  stdio.hpp  stdlib.hpp  string.hpp  time.hpp  unistd.hpp
include/ift/sys/: epoll.hpp  select.hpp  socket.hpp
sample/: Makefile.am  sample.c  sample.h  sample_test.cpp
script/: Makefile.am  runift.in
src/: Makefile.am  basic_impl.hpp  cdecls.hpp  incremental_failable.cpp  libift_preload.cpp  scoped_global_lock.cpp  scoped_global_lock.hpp  test_libift.cpp  test_stdio.cpp  test_stdlib.cpp  vargs_impl.hpp
src/fcntl/: Makefile.am  creat.cpp  open.cpp
src/signal/: Makefile.am  signal.cpp
src/stdio/: Makefile.am  fclose.cpp  fdopen.cpp  fgetc.cpp  fgetpos.cpp  fgets.cpp  fopen.cpp  fprintf.cpp  fputc.cpp  fputs.cpp  fread.cpp  freopen.cpp  fscanf.cpp  fseek.cpp  fsetpos.cpp  ftell.cpp  fwrite.cpp  getc.cpp  getchar.cpp  gets.cpp  printf.cpp  putchar.cpp  puts.cpp  remove.cpp  rename.cpp  scanf.cpp  setvbuf.cpp  snprintf.cpp  sprintf.cpp  sscanf.cpp  tmpfile.cpp  tmpnam.cpp  ungetc.cpp
src/stdlib/: Makefile.am  atexit.cpp  calloc.cpp  getenv.cpp  malloc.cpp  posix_memalign.cpp  realloc.cpp  system.cpp
src/string/: Makefile.am  stderror.cpp  strerror.cpp
src/sys/: Makefile.am
src/sys/epoll/: Makefile.am  epoll_create.cpp  epoll_create1.cpp  epoll_ctl.cpp  epoll_pwait.cpp  epoll_wait.cpp
src/sys/select/: Makefile.am  pselect.cpp  select.cpp
src/sys/socket/: Makefile.am  accept.cpp  accept4.cpp  bind.cpp  connect.cpp  getpeername.cpp  getsockname.cpp  getsockopt.cpp  isfdtype.cpp  listen.cpp  recv.cpp  recvfrom.cpp  recvmsg.cpp  send.cpp  sendmsg.cpp  sendto.cpp  setsockopt.cpp  shutdown.cpp  sockatmark.cpp  socket.cpp  socketpair.cpp
src/time/: Makefile.am  clock.cpp  strftime.cpp  time.cpp
src/unistd/: Makefile.am  access.cpp  acct.cpp  brk.cpp  chdir.cpp  chown.cpp  chroot.cpp  close.cpp  crypt.cpp  daemon.cpp  dup.cpp  dup2.cpp  dup3.cpp  eaccess.cpp  euidaccess.cpp  execv.cpp  execve.cpp  execvp.cpp  execvpe.cpp  faccessat.cpp  fchdir.cpp  fchown.cpp  fchownat.cpp  fdatasync.cpp  fexecve.cpp  fork.cpp  fpathconf.cpp  fsync.cpp  ftruncate.cpp  get_current_dir_name.cpp  getcwd.cpp  getdomainname.cpp  getgroups.cpp  gethostname.cpp  getlogin.cpp  getlogin_r.cpp  getpass.cpp  getpgid.cpp  getpgrp.cpp  getresgid.cpp  (+49 more)
test/: Makefile.am  test.cpp
test/fcntl/: test.cpp
test/signal/: Makefile.am  test.cpp
test/stdarg/: Makefile.am  test.cpp
test/stdio/: test.cpp
test/stdlib/: Makefile.am  test.cpp
test/string/: Makefile.am  test.cpp
test/sys/: Makefile.am
test/sys/epoll/: test.cpp
test/sys/select/: test.cpp
test/sys/socket/: test.cpp
test/time/: test.cpp
test/unistd/: test.cpp
