AM_CPPFLAGS=\
-I$(srcdir)/../

noinst_LTLIBRARIES=\
lib.la

lib_la_SOURCES=\
fopen.cpp \
fdopen.cpp \
freopen.cpp \
fclose.cpp \
fgetc.cpp \
fgets.cpp \
getc.cpp \
getchar.cpp \
gets.cpp \
ungetc.cpp \
printf.cpp \
fprintf.cpp \
sprintf.cpp \
snprintf.cpp \
fputc.cpp \
fputs.cpp \
putchar.cpp \
puts.cpp \
fread.cpp \
fwrite.cpp \
scanf.cpp \
fscanf.cpp \
sscanf.cpp \
fseek.cpp \
ftell.cpp \
fgetpos.cpp \
fsetpos.cpp \
remove.cpp \
rename.cpp \
setvbuf.cpp \
tmpfile.cpp \
tmpnam.cpp
