AM_CPPFLAGS=\
-I$(srcdir)/../

noinst_LTLIBRARIES=\
lib.la

lib_la_SOURCES=\
access.cpp \
euidaccess.cpp \
eaccess.cpp \
faccessat.cpp \
lseek.cpp \
close.cpp \
read.cpp \
write.cpp \
pread.cpp \
pwrite.cpp \
pipe.cpp \
pipe2.cpp \
usleep.cpp \
pause.cpp \
chown.cpp \
fchown.cpp \
lchown.cpp \
fchownat.cpp \
chdir.cpp \
fchdir.cpp \
getcwd.cpp \
get_current_dir_name.cpp \
dup.cpp \
dup2.cpp \
dup3.cpp \
execve.cpp \
fexecve.cpp \
execv.cpp \
execvp.cpp \
execvpe.cpp \
nice.cpp \
pathconf.cpp \
fpathconf.cpp \
sysconf.cpp \
getpgid.cpp \
setpgid.cpp \
setpgrp.cpp \
setsid.cpp \
getsid.cpp \
getgroups.cpp \
setuid.cpp \
setreuid.cpp \
seteuid.cpp \
setgid.cpp \
setregid.cpp \
setegid.cpp \
getresuid.cpp \
getresgid.cpp \
setresuid.cpp \
setresgid.cpp \
fork.cpp \
ttyname.cpp \
ttyname_r.cpp \
isatty.cpp \
link.cpp \
linkat.cpp \
symlink.cpp \
readlink.cpp \
symlinkat.cpp \
readlinkat.cpp \
unlink.cpp \
unlinkat.cpp \
rmdir.cpp \
tcgetpgrp.cpp \
tcsetpgrp.cpp \
getlogin.cpp \
getlogin_r.cpp \
gethostname.cpp \
sethostname.cpp \
sethostid.cpp \
getdomainname.cpp \
setdomainname.cpp \
vhangup.cpp \
acct.cpp \
daemon.cpp \
chroot.cpp \
getpass.cpp \
fsync.cpp \
syncfs.cpp \
truncate.cpp \
ftruncate.cpp \
brk.cpp \
sbrk.cpp \
lockf.cpp \
fdatasync.cpp \
crypt.cpp
