AM_CPPFLAGS=\
-I$(top_srcdir)/src

noinst_LTLIBRARIES=\
lib.la

lib_la_SOURCES=\
socket.cpp \
socketpair.cpp \
bind.cpp \
getsockname.cpp \
connect.cpp \
getpeername.cpp \
send.cpp \
recv.cpp \
sendto.cpp \
recvfrom.cpp \
sendmsg.cpp \
recvmsg.cpp \
getsockopt.cpp \
setsockopt.cpp \
listen.cpp \
accept.cpp \
accept4.cpp \
shutdown.cpp \
sockatmark.cpp \
isfdtype.cpp

lib_la_CXXFLAGS=\
$(AM_CXXFLAGS) \
-fno-exceptions
